deploy/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform
---
apiVersion: v1
kind: Namespace
metadata:
  name: app-prod
---
apiVersion: v1
kind: Namespace
metadata:
  name: app-stage
